# blog-agent

./: .dockerignore  .env.example  AGENT.md  Dockerfile  INDUSTRY_READY.md  README.md  app.db  pyproject.toml  report.md  run.sh
src/blog_generator/: __init__.py  agent.py  app.py  config.py  db.py  files.py  models.py
src/blog_generator/static/: app.js  blog-view.js  blog.html  generator.css  generator.html  index.html  styles.css
tests/: test_agent_helpers.py  test_db.py  test_files.py
